<?xml version="1.0"?>
<package>
  <name>canyonero</name>
  <version>1.0.0</version>
  <description>The canyonero package</description>

  <maintainer email="gitcvh95@gmail.com">Carlos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <export>
  </export>
</package>
