<package>
  <name>canyonero_msgs</name>
  <version>1.12.7</version>
  <description>The canyonero_msgs package</description>
  <maintainer email="gitcvh95@gmail.com">Carlos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export></export>

</package>
